--- a/main.css
+++ b/main.css
@@ -1,6 +1,11 @@
 a {
     text-decoration: none;
 }
+
+input[id="login-checkbox"] {
+    display: none;
+}
+
 .blind {
     position: absolute;
     clip: rect(0 0 0 0);
