--- a/modal.css
+++ b/modal.css
@@ -99,8 +99,6 @@ body {
     vertical-align: middle;
 }
 
-
-
 .checkbox-label {
     font-weight: 500;
     font-size: 16px;
@@ -116,6 +114,11 @@ body {
     margin-right: 8px;
     vertical-align: -5px;
     background-image: url("images/uncheck-box.png");
+}
+
+.content-loginform .login-checkbox:focus+.checkbox-label::before  {
+    outline: 2px solid #000;
+    outline-offset: 5px;
 }
 
 .content-loginform .login-checkbox:checked+.checkbox-label::before {
@@ -223,23 +226,28 @@ ul a[class^="link"]::before {
     height: 28px;
     float: left;
     margin: 11px;
+    background-image: url(images/spritesheet2.png);
+    background-repeat: no-repeat;
+    background-size: 80px 80px;
 }
 
 .link-google::before {
-    background: url(images/css_sprites.png)-58px -58px;
-    ;
+    background-position: -43px -6px;
 }
 
 .link-facebook::before {
-    background: url(images/css_sprites.png)-10px -58px;
+
+    background-position: -5px -7px;
 }
 
 .link-naver::before {
-    background: url(images/css_sprites.png)-58px -10px;
+
+    background-position: -43px -48px;
 }
 
 .link-kakao::before {
-    background: url(images/css_sprites.png)-10px -10px;
+
+    background-position: -5px -47px;
 }
 
 .btn-close {
